# excido

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cxx/: cc_adjuster.cpp  func_scanner.cpp  fuzz_builder.cpp  searcher.cpp
src/excido/: clang.py  constants.py  db_ast.py  db_cc.py  db_func.py  dep_graph.py  dep_resolver.py  exceptions.py  fuzz_builder.py  log.py  logging.py  templates.py  utils.py
utils/share/: fuzz.c.template
